# infomux

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  AUDIO_DEVICE_DETECTION_PLAN.md  FUTURE_PIPELINES.md  FUTURE_PLANS.md  OCR_COMPARISON.md  PSM_EXPLANATION.md
src/infomux/: __init__.py  __main__.py  audio.py  cli.py  config.py  job.py  llm.py  log.py  pipeline.py  pipeline_def.py  storage.py
src/infomux/commands/: __init__.py  analyze_timing.py  cleanup.py  inspect.py  resume.py  run.py  stream.py
src/infomux/steps/: __init__.py  align_lyrics.py  embed_subs.py  extract_audio.py  extract_text.py  generate_lyric_video.py  generate_video.py  isolate_vocals.py  storage.py  store_bear.py  store_json.py  store_markdown.py  store_obsidian.py  store_postgres.py  store_s3.py  store_sqlite.py  summarize.py  transcribe.py  transcribe_timed.py
tests/: __init__.py  test_audio.py  test_cli.py  test_embed_subs.py  test_extract_audio.py  test_extract_text.py  test_generate_lyric_video.py  test_generate_video.py  test_job.py  test_llm.py  test_lyric_video_filter_chain.py  test_lyric_video_isolated_pipeline.py  test_lyric_video_overlay.py  test_lyric_video_pipelines.py  test_overlay_filter_syntax.py  test_pipeline.py  test_positioning_bounds.py  test_resume.py  test_stores.py  test_stream.py  test_summarize.py  test_transcribe.py  test_transcribe_timed.py  test_url.py
