[project]
name = "infomux"
version = "0.1.0"
description = "A local-first, deterministic media pipeline CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "infomux contributors" }]
keywords = ["cli", "pipeline", "media", "transcription", "local-first"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Typing :: Typed",
]

# Minimal dependencies - stdlib only for core functionality
dependencies = [
    "ftfy>=6.0.0", # Fix Unicode encoding issues (mojibake, replacement characters)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]
ocr = [
    "easyocr>=1.7.0",  # Deep learning OCR (better quality, optional)
    # Note: For Apple Silicon, install PyTorch with Metal support:
    # pip install torch torchvision --index-url https://download.pytorch.org/whl/cpu
    # Or use the Metal-accelerated version for better performance
]
alignment = [
    "numpy>=1.9.0",  # Required by aeneas (must be installed first)
    "aeneas>=1.7.3",  # Forced alignment for official lyrics
    # Note: aeneas requires numpy to be installed BEFORE building
    # Manual install: uv pip install numpy && uv pip install aeneas
    # System dependencies: ffmpeg, espeak (brew install espeak on macOS)
]

[project.scripts]
infomux = "infomux.cli:main"

[project.urls]
Repository = "https://github.com/your-org/infomux"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/infomux"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/infomux"]
branch = true
